@@ -35,7 +35,6 @@ import getopt
 import fileinput
 import os
 import popen2
-import re
 import rfc822
 import string
 import sys
@@ -361,53 +360,20 @@ def main():
     # Decide what to do with the incoming message based on environment
     # variables supplied by qmail-local.  See qmail-command(8) for more info.
 
-    # EXT is the address extension, ext.
-    ext = os.environ.get('EXT')         
-    if ext:ext = string.lower(ext)
-
-    # EXT2 is the portion of EXT following the first dash.
-    ext2 = os.environ.get('EXT2') 
-    if ext2:ext2 = string.lower(ext2)
-
-    # EXT3 is the portion of EXT following the second dash.
-    # This should normally only be defined under a virtualdomain.
-    ext3 = os.environ.get('EXT3') 
-    if ext3:ext3 = string.lower(ext3)
-
-    # EXT4 is the portion of EXT following the third dash.  This
-    # should normally only be defined if a "pre-extension" is defined
-    # in /var/qmail/users/assign.
-    ext4 = os.environ.get('EXT4') 
-    if ext4:ext4 = string.lower(ext4)
-
-    # HOST is the domain part of the recipient address.
-    host = os.environ.get('HOST')
-    if host:host = string.lower(host)
-
-    # When qmail rewrites a virtualdomain address into a local one, it
-    # changes $USER, but not $HOST.  Therefore if $HOST is NOT in
-    # control/locals, it's a virtualdomain address.
-    localslist = []
-    for line in fileinput.input(Defaults.LOCALS):
-        localslist.append(string.lower(string.strip(line)))
-
-    # If this is a virtualdomain, shift the EXT* variables once left.
-    # (i.e, EXT under normal == EXT2 under a virtualdomain, etc.)
-    if host not in localslist:
-        ext = ext2
-        ext2 = ext3
-
-    # If a "pre-extension" is defined in the users/assign file, it is
-    # prepended to the address before being processed.  Set USERPREFIX
-    # to match the "pre-extension" so we can look for it and shift if
-    # off.
-    if Defaults.USERPREFIX:
-        prefix=ext[:string.find(ext,ext2)-1]
-        if prefix == Defaults.USERPREFIX:
-            # Shift the EXT* variables twice left.
-            ext = ext2
-            ext2 = ext3
-            ext3 = ext4
+    # Get cookie type and value
+    ext = os.environ.get('EXT')
+    if ext:
+        ext = string.lower(ext)
+        ext_split = string.split(ext,'-')
+        cookie_value = ext_split[-1]
+        try:
+            cookie_type = ext_split[-2]
+        except IndexError:
+            cookie_type = ext_split[-1]
+            cookie_value = None
+    else:
+        cookie_type = None
+        cookie_value = None
             
     # Extract the e-mail address from From:, and Reply-To:
     EnvelopeSender = string.lower(envelope_sender)
@@ -430,13 +396,12 @@ def main():
                 pass
 
         # Confirm tag?
-        if ext and (ext == 'confirm' or re.match("^confirm-\w+",ext)):
-            confirm_cookie = ext2
-            if not confirm_cookie:
-                ext = Defaults.COOKIE_TYPE
+        if cookie_type == 'confirm':
+            if not cookie_value:
+                cookie_type = Defaults.COOKIE_TYPE
                 pass
             else:
-                verify_confirm_cookie(confirm_cookie)
+                verify_confirm_cookie(cookie_value)
                 pass
 
         # Is the sender in the WHITELIST?
@@ -449,23 +414,21 @@ def main():
                 pass
             
         # Dated tag?
-        if ext and (ext == 'dated' or re.match("^dated-\w+",ext)):
-            dated_cookie = ext2
-            verify_dated_cookie(dated_cookie)
+        if cookie_type == 'dated':
+            verify_dated_cookie(cookie_value)
             pass
         
         # Sender tag?
-        if ext and (ext == 'sender' or re.match("^sender-\w+",ext)):
-            sender_cookie = ext2
+        if cookie_type == 'sender':
             sender_address = globals().get('envelope_sender')
-            verify_sender_cookie(sender_address,sender_cookie)
+            verify_sender_cookie(sender_address,cookie_value)
             pass
 
         # They get the default tag.
         if Defaults.COOKIE_TYPE == 'dated':
-            ext = 'dated'
+            cookie_type = 'dated'
         elif Defaults.COOKIE_TYPE == 'sender':
-            ext = 'sender'
+            cookie_type = 'sender'
         elif Defaults.COOKIE_TYPE == 'bare':
             logit("OK bare", time.time())
             sys.exit(Defaults.ERR_OK)
