@@ -1,3 +1,8 @@
+2001-07-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-filter (main): Much cleaner cookie parsing.  
+	Patch contributed by Ron Bickers.
+
 2001-07-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-filter (locate_pending): Send confirmation acceptance
