@@ -1,5 +1,7 @@
 2001-07-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* sample.tmdarc: LOCALS no longer necessary.
+
 	* tmda.spec: Raise version number to 0.31.
 
 2001-07-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
