@@ -2,6 +2,10 @@
 
 	* Defaults.py (TMDA_VERSION): Begin 0.31 development.
 
+	(LOCALS): Variable no longer necessary.
+
+	(USERPREFIX): Ditto.
+
 2001-07-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Util.py (maketext): Add error checking for template variables.
